@@ -37,6 +37,28 @@ SOURCE +=\
 
 include ../Makefile.inc
 
+ifeq ($(OS_DIMM),none)
+	NOT_RECOMMENDED = Continuing the build without NDCTL is highly NOT recommended for production quality systems.
+	RAS_SUFFIX = Please see https://www.intel.com/content/www/us/en/developer/articles/technical/build-pmem-apps-with-ras.html for more info on RAS features.
+        PMEMOBJ_IGNORE_DIRTY_SHUTDOWN ?= n
+        ifneq ($(PMEMOBJ_IGNORE_DIRTY_SHUTDOWN),y)
+                $(info Libpmemobj without NDCTL cannot detect dirty shutdowns. This may result in silent data corruption.)
+                $(info $(NOT_RECOMMENDED))
+                $(info If you understand the consequences for consistency of your data please set PMEMOBJ_IGNORE_DIRTY_SHUTDOWN=y to silence this error.)
+                $(info $(RAS_SUFFIX))
+                $(error )
+        endif
+
+        PMEMOBJ_IGNORE_BAD_BLOCKS ?= n
+        ifneq ($(PMEMOBJ_IGNORE_BAD_BLOCKS),y)
+                $(info Libpmemobj without NDCTL cannot detect bad blocks up front. This may result in SIGBUS at runtime.)
+                $(info $(NOT_RECOMMENDED))
+                $(info If you understand the consequences for the behaviour of your application at runtime please set PMEMOBJ_IGNORE_BAD_BLOCKS=y to silence this error.)
+                $(info $(RAS_SUFFIX))
+                $(error )
+        endif
+endif
+
 CFLAGS += -DUSE_LIBDL -D_PMEMOBJ_INTRNL $(LIBNDCTL_CFLAGS)
 
 LIBS += -pthread -lpmem $(LIBDL) $(LIBNDCTL_LIBS)
